{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 254,
  "lineage": "f0abc5f1-2825-cc6a-d3fe-413eb01b72fb",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev_proj_1_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:loadbalancer/app/dev-proj-1-alb/ce4c70e0b9dbc73c",
            "arn_suffix": "app/dev-proj-1-alb/ce4c70e0b9dbc73c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-proj-1-alb-418268050.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:loadbalancer/app/dev-proj-1-alb/ce4c70e0b9dbc73c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-proj-1-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c8b865bba46be1e1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-068867c1b60f395f1"
              },
              {
                "subnet_id": "subnet-0b62ca08a4c601301"
              }
            ],
            "subnets": [
              "subnet-068867c1b60f395f1",
              "subnet-0b62ca08a4c601301"
            ],
            "tags": {
              "Name": "example-lb"
            },
            "tags_all": {
              "Name": "example-lb"
            },
            "vpc_id": "vpc-0319f82f30e737e90",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev_proj_1_lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:listener/app/dev-proj-1-alb/ce4c70e0b9dbc73c/7b3550f902fdd333",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:targetgroup/jenkins-lb-target-group/e93040c1ecd55263",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:listener/app/dev-proj-1-alb/ce4c70e0b9dbc73c/7b3550f902fdd333",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:loadbalancer/app/dev-proj-1-alb/ce4c70e0b9dbc73c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.dev_proj_1_lb",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_proj_1_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:targetgroup/jenkins-lb-target-group/e93040c1ecd55263-20250210200025732500000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:targetgroup/jenkins-lb-target-group/e93040c1ecd55263",
            "target_id": "i-02e902184adde2cd8"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087a0156cb826e921",
            "arn": "arn:aws:ec2:eu-west-1:222634379970:instance/i-02e902184adde2cd8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e902184adde2cd8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f509edc87af7fe85",
            "private_dns": "ip-11-0-1-54.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.54",
            "public_ip": "54.247.227.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0869cad96398b2d2e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068867c1b60f395f1",
            "tags": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tags_all": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085e27e65052248fd",
              "sg-0c8b865bba46be1e1"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_proj_1_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:targetgroup/jenkins-lb-target-group/e93040c1ecd55263",
            "arn_suffix": "targetgroup/jenkins-lb-target-group/e93040c1ecd55263",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:targetgroup/jenkins-lb-target-group/e93040c1ecd55263",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:222634379970:loadbalancer/app/dev-proj-1-alb/ce4c70e0b9dbc73c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-lb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_proj_1_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:targetgroup/jenkins-lb-target-group/e93040c1ecd55263-20250210192020875400000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:222634379970:targetgroup/jenkins-lb-target-group/e93040c1ecd55263",
            "target_id": "i-02e902184adde2cd8"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_proj_1_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:internet-gateway/igw-0363c04a4deba517b",
            "id": "igw-0363c04a4deba517b",
            "owner_id": "222634379970",
            "tags": {
              "Name": "dev-proj-1-igw"
            },
            "tags_all": {
              "Name": "dev-proj-1-igw"
            },
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:route-table/rtb-02c8d090884132907",
            "id": "rtb-02c8d090884132907",
            "owner_id": "222634379970",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-proj-1-private-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:route-table/rtb-04b6727d4a47d1f2d",
            "id": "rtb-04b6727d4a47d1f2d",
            "owner_id": "222634379970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0363c04a4deba517b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-proj-1-public-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeeb0eab01da117b",
            "route_table_id": "rtb-02c8d090884132907",
            "subnet_id": "subnet-0bcd4a0cef8880a9f"
          },
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_subnets",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003357af14a421143",
            "route_table_id": "rtb-02c8d090884132907",
            "subnet_id": "subnet-09cfd7f12538f5ee5"
          },
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_subnets",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072b63b53fb313d3a",
            "route_table_id": "rtb-04b6727d4a47d1f2d",
            "subnet_id": "subnet-068867c1b60f395f1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080dad4025a4d6e1b",
            "route_table_id": "rtb-04b6727d4a47d1f2d",
            "subnet_id": "subnet-0b62ca08a4c601301"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:subnet/subnet-0bcd4a0cef8880a9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcd4a0cef8880a9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-1"
            },
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:subnet/subnet-09cfd7f12538f5ee5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cfd7f12538f5ee5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-2"
            },
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:subnet/subnet-068867c1b60f395f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068867c1b60f395f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-1"
            },
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:subnet/subnet-0b62ca08a4c601301",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b62ca08a4c601301",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-2"
            },
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_proj_1_vpc_eu_central_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:vpc/vpc-0319f82f30e737e90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0b28fecc62533173e",
            "default_route_table_id": "rtb-02426cf151fcd45b0",
            "default_security_group_id": "sg-045aa9b6e35ba96de",
            "dhcp_options_id": "dopt-0ae61cc58fd6b2633",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0319f82f30e737e90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02426cf151fcd45b0",
            "owner_id": "222634379970",
            "tags": {
              "Name": "dev-proj-jenkins-eu-west-vpc-1"
            },
            "tags_all": {
              "Name": "dev-proj-jenkins-eu-west-vpc-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:security-group/sg-085e27e65052248fd",
            "description": "Enable the Port 8080 for jenkins",
            "egress": [],
            "id": "sg-085e27e65052248fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 port to access jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "222634379970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:security-group/sg-0c8b865bba46be1e1",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8b865bba46be1e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "222634379970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0319f82f30e737e90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    }
  ]
}